[package]
name = "dumb-pulse-volume"
version = "0.1.0"
authors = ["Mikhail Khvoinitsky <me@khvoinitsky.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-pulsectl = "0.2.6"
libpulse-binding = "2.15.0"
structopt = { version = "0.3", default-features = false }
notify-rust = "3.6.3"
nix = "0.16.1"
