[package]
name = "dumb-pulse-volume"
version = "0.1.0"
authors = ["Mikhail Khvoinitsky <me@khvoinitsky.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.26", features = ["derive"] }
pulsectl-rs = "0.3.2"
libpulse-binding = "2.26.0"
notify-rust = "4.5.10"
nix = "0.25.0"
